# c-programming

./: CMakeLists.txt  README.md
opengl/: CMakeLists.txt  README.md  app.h  camera.h  context.h  gen.h  guilayer.h  input.h  keyboard.h  layer.h  main.c  mem.h  mesh.h  model.h  mouse.h  shader.h  texture.h  things.h  transform.h  util.h  window.h
opengl/assets/models/: cube.model  flat.model  heightmap.model  noise.model  surfrev.model
opengl/assets/shaders/: agent.glsl  fader.glsl  frag.glsl  vert.glsl
opengl/include/: nuklear.h  nuklear_glfw_gl3.h
opengl/models/: cube.model  ellipsoid.model
opengl/old/: camera.h  keyboard.h  main.c  mesh.h  texture.h  things.h  transform.h
opengl/render/: camera.h  context.h  mesh.h  model.h  render.h  shader.h  window.h
opengl/scripts/: primitives.py  terrain.py
opengl/shaders/: frag.glsl  vert.glsl
opengl/slime/: CMakeLists.txt  app.h  guilayer.h  layer.h  main.c  things.h
pointies/: CMakeLists.txt  README.md  main.c
raylib/: CMakeLists.txt  README.md  camera.h  draw.h  interp.h  main.c  mem.h
raylib/2d/: CMakeLists.txt  draw2d.h  interp2d.h  main2d.c  rand2d.h
src/: main.c
